# Modular_ML_Phytoplankton

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements2.txt  requirements3.txt  run_analysis.py
.github/workflows/: tests.yml
configs/: diat_pr.yaml
notebooks/: diat_pr_hist_modular.ipynb  diat_pr_hist_old.ipynb
outputs/metrics/: train_metrics.csv
outputs/model/: model_diat_pr.joblib
src/: config.py  data.py  evaluation.py  figure1.py  modeling.py  output.py  processing.py  utils.py  visualization.py
src/api/: main.py  model_info.py  model_loader.py  predictor.py  schemas.py
tests/: conftest.py  test_api.py  test_config.py  test_model.py  test_processing.py  test_save_metrics.py
